--- a/release-notes/4.7.24.md
+++ b/release-notes/4.7.24.md
@@ -2,10 +2,24 @@
 
 Released September 6, 2017;
 
+- **[Synopsis](#synopsis)**
 - **[Features](#features)**
 - **[Bugs resolved](#bugs)**
 - **[Miscellany](#misc)**
 - **[Credits](#credits)**
+- **[Feedback](#feedback)**
+
+## <a name="synopsis"></a>Synopsis
+
+| *Does this version...?*                                     |         |
+|:----------------------------------------------------------- |:-------:|
+| Fix security vulnerabilities?                               |         |
+| Change the database schema?                                 |         |
+| Alter the API?                                              |         |
+| Require attention to configuration options?                 |         |
+| Fix problems installing or upgrading to a previous version? |         |
+| Introduce features?                                         |         |
+| Fix bugs?                                                   |         |
 
 ## <a name="features"></a>Features
 
@@ -177,9 +191,15 @@ Released September 6, 2017;
 
 This release was developed by the following code authors:
 
-AGH Strategies - Andrew Hunt; Australian Greens - Seamus Lee; CiviCRM - Coleman Watts, Tim Otten; CompuCorp - Michael Devery; Coop SymbioTIC - Samuel Vanhove; dsnopek; Electronic Frontier Foundation - Mark Burdett; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit; JMA Consulting - Edsel Lopez, Monish Deb, Pradeep Nayak; John Kingsnorth; Korlon - Stuart Gaston; Megaphone Technology Consulting - Jon Goldberg; MJW Consulting - Matthew Wire; Oxfam Germany - Thomas Schüttler; Progressive Technology Project - Jamie McClelland; Sean Madsen; Wikimedia Foundation - Eileen McNaughton
+AGH Strategies - Andrew Hunt; Australian Greens - Seamus Lee; CiviCRM - Coleman Watts, Tim Otten; CompuCorp - Michael Devery; Coop SymbioTIC - Samuel Vanhove; dsnopek; Electronic Frontier Foundation - Mark Burdett; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit; JMA Consulting - Edsel Lopez, Monish Deb, Pradeep Nayak; John Kingsnorth; Korlon - Stuart Gaston; Left Join Labs - Sean Madsen; Megaphone Technology Consulting - Jon Goldberg; MJW Consulting - Matthew Wire; Oxfam Germany - Thomas Schüttler; Progressive Technology Project - Jamie McClelland; Wikimedia Foundation - Eileen McNaughton
 
 Most authors also reviewed code for this release; in addition, the following
 reviewers contributed their comments:
 
-AGH Strategies - Andrew Hunt; Alcohol Justice - Bruce Wolfe; ASMC; Australian Greens - Seamus Lee; British Humanist Association - William Gordon; CiviCoop - Jaap Jansma; civicrm-builder; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Nicolas Ganivet; CompuCorp - Guanhuan Chen, Jamie Novick, Michael Devery; Coop SymbioTIC - Mathieu Lutfy, Samuel Vanhove, Stéphane Lussier; Dave Greenberg; DevMate - Adam Kwiatkowski; dsnopek; dvalentine@ndi.org; Electronic Frontier Foundation - Mark Burdett; Francesc Bassas i Bullich; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit, Peter Davis; Greenleaf Advancement - Karen Stevenson; Hunabku; jern; JMA Consulting - Edsel Lopez, Joe Murray, Monish Deb, Pradeep Nayak; John Kingsnorth; Korlon - Stuart Gaston; Lighthouse Design and Consulting - Brian Shaughnessy; lsmithgo; Megaphone Technology Consulting - Jon Goldberg; MJW Consulting - Matthew Wire; Nathan Brettell; Oxfam Germany - Thomas Schüttler; Progressive Technology Project - Jamie McClelland; Sean Madsen; Semper IT - Karin Gerritsen; Skvare - Mark Hanna; Stephen Palmstrom; Tadpole Collective - Kevin Cristiano; Team Expansion - Greg Harris; Thomas Bacon; Thomas Nilefalk; thoni56; Torrance Hodgson; Wikimedia Foundation - Eileen McNaughton
+AGH Strategies - Andrew Hunt; Alcohol Justice - Bruce Wolfe; ASMC; Australian Greens - Seamus Lee; British Humanist Association - William Gordon; CiviCoop - Jaap Jansma; civicrm-builder; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Nicolas Ganivet; CompuCorp - Guanhuan Chen, Jamie Novick, Michael Devery; Coop SymbioTIC - Mathieu Lutfy, Samuel Vanhove, Stéphane Lussier; Dave Greenberg; DevMate - Adam Kwiatkowski; dsnopek; dvalentine@ndi.org; Electronic Frontier Foundation - Mark Burdett; Francesc Bassas i Bullich; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit, Peter Davis; Greenleaf Advancement - Karen Stevenson; Hunabku; jern; JMA Consulting - Edsel Lopez, Joe Murray, Monish Deb, Pradeep Nayak; John Kingsnorth; Korlon - Stuart Gaston; Lighthouse Design and Consulting - Brian Shaughnessy; lsmithgo; Megaphone Technology Consulting - Jon Goldberg; MJW Consulting - Matthew Wire; Nathan Brettell; Oxfam Germany - Thomas Schüttler; Progressive Technology Project - Jamie McClelland; Semper IT - Karin Gerritsen; Skvare - Mark Hanna; Stephen Palmstrom; Tadpole Collective - Kevin Cristiano; Team Expansion - Greg Harris; Thomas Bacon; Thomas Nilefalk; thoni56; Torrance Hodgson; Wikimedia Foundation - Eileen McNaughton
+
+## <a name="feedback"></a>Feedback
+
+These release notes are edited by Andrew Hunt.  If you'd like to provide
+feedback on them, please login to https://chat.civicrm.org/civicrm and contact
+`@agh1`.
