cleaning up and dealing with documentation of bigger changes

--- a/release-notes/4.7.24.md
+++ b/release-notes/4.7.24.md
@@ -13,13 +13,13 @@ Released September 6, 2017;
 
 | *Does this version...?*                                     |         |
 |:----------------------------------------------------------- |:-------:|
-| Fix security vulnerabilities?                               |         |
-| Change the database schema?                                 |         |
-| Alter the API?                                              |         |
-| Require attention to configuration options?                 |         |
-| Fix problems installing or upgrading to a previous version? |         |
-| Introduce features?                                         |         |
-| Fix bugs?                                                   |         |
+| Fix security vulnerabilities?                               |   No    |
+| Change the database schema?                                 |   Yes   |
+| Alter the API?                                              |   Yes   |
+| Require attention to configuration options?                 |   No    |
+| Fix problems installing or upgrading to a previous version? |   No    |
+| Introduce features?                                         |   Yes   |
+| Fix bugs?                                                   |   Yes   |
 
 ## <a name="features"></a>Features
 
@@ -29,34 +29,43 @@ Released September 6, 2017;
   membership type should change related contribution
   ([10699](https://github.com/civicrm/civicrm-core/pull/10699))**
 
-  **NOT CLEAR** NEEDS ATTENTION
+  Provides option to tie the financial type of the contribution to the membership
+  type of its related membership when that membership type gets changed.
 
 - **[CRM-20965](https://issues.civicrm.org/jira/browse/CRM-20965) Add Pull
   Request Template ([10784](https://github.com/civicrm/civicrm-core/pull/10784)
   and [10758](https://github.com/civicrm/civicrm-core/pull/10758))**
 
-  Sets up a PR template in github to help contributers standardize their pull
-  request documentation
+  This change sets up a PR template in github to help contributers standardize
+  their pull request documentation.
 
 - **[CRM-20960](https://issues.civicrm.org/jira/browse/CRM-20960) Upgrade Dompdf
   to 0.8 ([10751](https://github.com/civicrm/civicrm-core/pull/10751))**
 
+  Civicrm now uses dompdf to 0.8 which is compatible with php7.1.
+
 - **[CRM-20929](https://issues.civicrm.org/jira/browse/CRM-20929) Allow styling
   of page title in Angular
   ([10711](https://github.com/civicrm/civicrm-core/pull/10711))**
+
+  This change conveys css classes from angular crm-page-title elements to the
+  main page title for styling purposes.
 
 - **[CRM-20941](https://issues.civicrm.org/jira/browse/CRM-20941) Determine &
   notify date to end support for PHP5.3 and PHP5.4
   ([10948](https://github.com/civicrm/civicrm-core/pull/10948) and
   [10872](https://github.com/civicrm/civicrm-core/pull/10872))**
 
-  Updates messages regarding support for  PHP5.3 and PHP5.4
+  Updated upgrade message text regarding support for PHP5.3 and PHP5.4
 
 - **[CRM-20563](https://issues.civicrm.org/jira/browse/CRM-20563) Improve
   'unable to provide this...' error message
   ([10340](https://github.com/civicrm/civicrm-core/pull/10340))**
 
-  Makes the error message more descriptive.
+  More descriptive version of "Sorry but we are not able to provide this at the
+  moment." error message it now says "Sorry, due to an error, CiviCRM is unable to
+  fulfill your request at the moment. You may want to contact your administrator
+  or service provider with more details about when this occurred."
 
 - **[CRM-20945](https://issues.civicrm.org/jira/browse/CRM-20945) Differentiate
   using CSS active selected page in AtoZ Pager
@@ -72,51 +81,39 @@ Released September 6, 2017;
   ([10814](https://github.com/civicrm/civicrm-core/pull/10814),
   [10806](https://github.com/civicrm/civicrm-core/pull/10806),
   [10777](https://github.com/civicrm/civicrm-core/pull/10777), and
-  [10774](https://github.com/civicrm/civicrm-core/pull/10774))**
+  [10774](https://github.com/civicrm/civicrm-core/pull/10774)) (Initial Work)**
 
-  + Code repetition of the receipt_date construct in the tpl. Once for credit card payments & once not, with no substantive difference. Consolidates them and moves them out of the payment block,
-  which going forwards will better distinguish between the contribution and
-  the payments towards it.
-  + Modified payment fields like credit-card-type, pan_truncation and check_number as optional fields.
-  + Added medium-popup to payment-edit action link to minimize the payment edit form size. But there's a limitation - if you open a popup form inside a popup form, that special class has no effect on the form size. Please check the screencast here.
-  + Shifted the action link from left to right.
-  + Added payment_instrument_id and trxn_id fields in payment edit form
-  + Added formRule validation and added rule for pan_truncation to be numeric
-  + Changed the credit_card_type icon field to card_type_id select field.
-  + Used addField to render some FinancialTrxn fields.
-  + Handle financial accounts if payment instrument is changed via payment edit form
-  + Modify Financial.create API to call CRM_Core_BAO_FinancialTrxn::create(...)
-  + Added CRM unit test for PaymentEdit
+  Updates the user experience for partial payments for events, memberships and contributions on entry, editing and display.
 
 - **[CRM-20890](https://issues.civicrm.org/jira/browse/CRM-20890) Move
   recieve_date between Contribution status and Revenue Recognition date in
   Contribution backoffice form
   ([10682](https://github.com/civicrm/civicrm-core/pull/10682))**
 
-  Moves the placement of fields on the backoffice contribution form to enhance
-  user experience.
+  This change moves the placement of fields on the backoffice contribution form
+  to enhance user experience.
 
 - **[CRM-20984](https://issues.civicrm.org/jira/browse/CRM-20984) Move placement
   of payment processor field on live mode
   ([10787](https://github.com/civicrm/civicrm-core/pull/10787))**
 
-  Moves the placement of the choose payment processor field on live mode closer to
-  billing block to improve user experience.
+  This change moves the placement of the choose payment processor field on live
+  mode contribution form closer to the billing block to improve user experience.
 
 - **[CRM-20860](https://issues.civicrm.org/jira/browse/CRM-20860) Add in
   password type field availability and apply to payment processor fields
   ([10660](https://github.com/civicrm/civicrm-core/pull/10660))**
 
-  Adds in the ability to add in a password type field as an option for
-  QuickForm and applies this to Payment Processor Password fields. This is
-  because passwords are currently in clear text which isn't really suitable
+  Added in the ability to add in a password type field as an option for
+  QuickForm. This new field type is also applied to the Payment Processor Password fields for
+  security purposes.
 
 - **[CRM-20876](https://issues.civicrm.org/jira/browse/CRM-20876) in honor of
   does not show up on contribution receipt
   ([10668](https://github.com/civicrm/civicrm-core/pull/10668))**
 
-  When making a contribution in honor of someone, the person who is being
-  honored now shows up on the receipt.
+  Now, When making a contribution in honor of someone, the person who is being
+  honored shows up on the receipt.
 
 ### CiviPledge
 
@@ -126,7 +123,8 @@ Released September 6, 2017;
   [10803](https://github.com/civicrm/civicrm-core/pull/10803), and
   [10737](https://github.com/civicrm/civicrm-core/pull/10737))**
 
-  THIS IS A BIG CHANGE COME BACK TO IT
+  Creates a new option group for pledge status for pledges to use (pledges were
+  using contribution statuses).
 
 ### CiviMail
 
@@ -134,8 +132,8 @@ Released September 6, 2017;
   of groups and mailings in CiviMail to be loaded dynamically
   ([10303](https://github.com/civicrm/civicrm-core/pull/10303))**
 
-  Converts list of groups and mailings in CiviMail to be loaded dynamically to
-  improve performance for sites with lots of groups and/or mailings.
+  This change converts list of groups and mailings in CiviMail to be loaded
+  dynamically to improve performance.
 
 ### Accounting Integration
 
@@ -143,10 +141,9 @@ Released September 6, 2017;
   transaction date field to listings of transactions
   ([10789](https://github.com/civicrm/civicrm-core/pull/10789))**
 
-  Financial batch listing page lists transaction with transaction date derived
-  from civicrm_financial_trxn table(column name = Received). This PR  renames the
-  column name from Received to Transaction Date and Adding column Received derived
-  from civicrm_contribution.receive_date
+  On the Financial batch listing page lists This PR  renames
+  the column name from Received to Transaction Date and Adds a column Received
+  derived from civicrm_contribution.receive_date
 
 ### CiviReport
 
@@ -162,7 +159,7 @@ Released September 6, 2017;
   ([10795](https://github.com/civicrm/civicrm-core/pull/10795))**
 
   Changes CurrentEmployer Report to get Employee Relationship type from api
-  instead of hardcoded value
+  instead of a hardcoded value of the id 4.
 
 - **[CRM-20931](https://issues.civicrm.org/jira/browse/CRM-20931) Allow contact
   custom fields to be added to Contribution Detail report
@@ -203,21 +200,22 @@ Released September 6, 2017;
   Deprecation Notice caused by ActivityLinks
   ([10722](https://github.com/civicrm/civicrm-core/pull/10722))**
 
-  remove use of CRM_Core_OptionGroup::getKey which is deprecated
+  Removes use of CRM_Core_OptionGroup::getKey function which is deprecated
 
 - **[CRM-20967](https://issues.civicrm.org/jira/browse/CRM-20967) Event
   Participants List shows Total paid and balance incorrect
   ([10763](https://github.com/civicrm/civicrm-core/pull/10763))**
 
-  Participants List shows Total paid and balance incorrect when Deferred revenue
-  is enabled
+  Fixes a bug where the Participants List was showing "Total paid" and "balance"
+  incorrect when Deferred revenue was enabled.
 
 - **[CRM-20946](https://issues.civicrm.org/jira/browse/CRM-20946) Wrong entries
   in financial table when contribution is cancelled
   ([10726](https://github.com/civicrm/civicrm-core/pull/10726))**
 
-  Wrong entries in financial table when contribution is canceled, now uses line
-  total of line item to store in financial item table
+  Fixes a bug where the Wrong entries were being added to the financial table
+  when the contribution was canceled, now uses line total of line item to store
+  in financial item table
 
 - **[CRM-20607](https://issues.civicrm.org/jira/browse/CRM-20607) Can't save a
   reserved dedupe rule
@@ -239,17 +237,12 @@ Released September 6, 2017;
   code in db prevents searching by zipcode range
   ([10769](https://github.com/civicrm/civicrm-core/pull/10769))**
 
-  long postal code in db prevents searching by zipcode range on some
+  entering a long postal code into the db was preventing searching by zipcode range on some
   configurations.
 
 - **[CRM-20973](https://issues.civicrm.org/jira/browse/CRM-20973) Call to
   undefined function Civi\API\civicrm_api3_create_error() in Civi/API/Kernel.php
   on line 413 ([10773](https://github.com/civicrm/civicrm-core/pull/10773))**
-
-  Civi/API/Kernel.php is in the Civi\API namespace and it's calling
-  civicrm_api3_create_error() with no namespace so it's assumed (by PHP) to be in
-  the same namespace, ie. Civi\API\civicrm_api3_create_error(). However, it's
-  really at the top-level, ie \civicrm_api3_create_error()
 
 - **[CRM-20976](https://issues.civicrm.org/jira/browse/CRM-20976) Improve error
   handling when someone tries to make a credit card contribution and no
@@ -323,8 +316,8 @@ Released September 6, 2017;
   ([10895](https://github.com/civicrm/civicrm-core/pull/10895))**
 
   In the preview section of a mailing, the "Send test email to groups" dropdown
-  showed an empty list by default. This list is now only populated by the current
-  list of recipients, if any. It should list existing groups even though these are
+  showed an empty list by default. This list was populated by the current
+  list of recipients, if any. It now lists existing groups even though these are
   not chosen as recipients.
 
 - **[CRM-21070](https://issues.civicrm.org/jira/browse/CRM-21070) Intra-rc
@@ -337,15 +330,12 @@ Released September 6, 2017;
   payment not accurately calculated when effective date passed in
   ([10818](https://github.com/civicrm/civicrm-core/pull/10818))**
 
-  This pull request fixes a bug that entered the code base in May, causing payment
-  processors that rely on CiviCRM updating the next_sched_contribution_date for
-  recurring to not get it updated.
+  This pull request fixes a bug causing payment processors that rely on CiviCRM
+  updating the next_sched_contribution_date for recurring to not get it updated.
 
 - **[CRM-20800](https://issues.civicrm.org/jira/browse/CRM-20800) User Cannot
   Cancel Recurring Payment With Paypal
-  ([10833](https://github.com/civicrm/civicrm-core/pull/10833))**
-
-  From reading the issue it does not seem like this is done!!!
+  ([10833](https://github.com/civicrm/civicrm-core/pull/10833)) (Initial Work)**
 
 - **[CRM-20821](https://issues.civicrm.org/jira/browse/CRM-20821) Saving an
   existing premium product breaks the image URLs
