--- a/release-notes/4.7.24.md
+++ b/release-notes/4.7.24.md
@@ -1,6 +1,6 @@
 # CiviCRM 4.7.24
 
-Released September 6, 2017;
+Released September 6, 2017
 
 - **[Synopsis](#synopsis)**
 - **[Features](#features)**
@@ -402,35 +402,30 @@ This release was developed by the following code authors:
 
 AGH Strategies - Andrew Hunt; Australian Greens - Seamus Lee; CiviCRM - Coleman
 Watts, Tim Otten; CompuCorp - Michael Devery; Coop SymbioTIC - Samuel Vanhove;
-dsnopek; Electronic Frontier Foundation - Mark Burdett; Fuzion - Chris Burgess,
-Eileen McNaughton, Jitendra Purohit; JMA Consulting - Edsel Lopez, Monish Deb,
-Pradeep Nayak; John Kingsnorth; Korlon - Stuart Gaston; Left Join Labs - Sean
-Madsen; Megaphone Technology Consulting - Jon Goldberg; MJW Consulting - Matthew
-Wire; Oxfam Germany - Thomas Schüttler; Progressive Technology Project - Jamie
-McClelland; Wikimedia Foundation - Eileen McNaughton
+Electronic Frontier Foundation - Mark Burdett; Fuzion - Chris Burgess, Eileen
+McNaughton, Jitendra Purohit; JMA Consulting - Edsel Lopez, Monish Deb, Pradeep
+Nayak; John Kingsnorth; Korlon - Stuart Gaston; Left Join Labs - Sean Madsen;
+Megaphone Technology Consulting - Jon Goldberg; MJW Consulting - Matthew Wire;
+myDropWizard - David Snopek; Oxfam Germany - Thomas Schüttler; Progressive
+Technology Project - Jamie McClelland; Wikimedia Foundation - Eileen McNaughton
 
 Most authors also reviewed code for this release; in addition, the following
 reviewers contributed their comments:
 
-AGH Strategies - Andrew Hunt; Alcohol Justice - Bruce Wolfe; ASMC; Australian
-Greens - Seamus Lee; British Humanist Association - William Gordon; CiviCoop -
-Jaap Jansma; civicrm-builder; CiviCRM - Coleman Watts, Tim Otten; CiviDesk -
-Nicolas Ganivet; CompuCorp - Guanhuan Chen, Jamie Novick, Michael Devery; Coop
-SymbioTIC - Mathieu Lutfy, Samuel Vanhove, Stéphane Lussier; Dave Greenberg;
-DevMate - Adam Kwiatkowski; dsnopek; dvalentine@ndi.org; Electronic Frontier
-Foundation - Mark Burdett; Francesc Bassas i Bullich; Fuzion - Chris Burgess,
-Eileen McNaughton, Jitendra Purohit, Peter Davis; Greenleaf Advancement - Karen
-Stevenson; Hunabku; jern; JMA Consulting - Edsel Lopez, Joe Murray, Monish Deb,
-Pradeep Nayak; John Kingsnorth; Korlon - Stuart Gaston; Lighthouse Design and
-Consulting - Brian Shaughnessy; lsmithgo; Megaphone Technology Consulting - Jon
-Goldberg; MJW Consulting - Matthew Wire; Nathan Brettell; Oxfam Germany - Thomas
-Schüttler; Progressive Technology Project - Jamie McClelland; Semper IT - Karin
-Gerritsen; Skvare - Mark Hanna; Stephen Palmstrom; Tadpole Collective - Kevin
-Cristiano; Team Expansion - Greg Harris; Thomas Bacon; Thomas Nilefalk; thoni56;
-Torrance Hodgson; Wikimedia Foundation - Eileen McNaughton
+Alcohol Justice - Bruce Wolfe; Apple Street Market - Sean Prónay; British
+Humanist Association - William Gordon; CiviCoop - Jaap Jansma; CiviDesk -
+Nicolas Ganivet; CompuCorp - Guanhuan Chen, Jamie Novick; Coop SymbioTIC -
+Mathieu Lutfy, Stéphane Lussier; Dave Greenberg; DevMate - Adam Kwiatkowski;
+DreamSpace - Anthony Colombo; Francesc Bassas i Bullich; Fuzion - Peter Davis;
+Greenleaf Advancement - Karen Stevenson; JMA Consulting - Joe Murray; Lighthouse
+Design and Consulting - Brian Shaughnessy; Lionel Smith-Gordon; Nathan Brettell;
+National Democratic Institute - Dean Valentine; Responsive Development
+Technologies - Thomas Nilefalk; Semper IT - Karin Gerritsen; SEN Magazine -
+Jeremy Nicholls; Skvare - Mark Hanna; Stephen Palmstrom; Tadpole Collective -
+Kevin Cristiano; Team Expansion - Greg Harris; Thomas Bacon; Torrance Hodgson
 
 ## <a name="feedback"></a>Feedback
 
-These release notes are edited by Andrew Hunt.  If you'd like to provide
-feedback on them, please login to https://chat.civicrm.org/civicrm and contact
-`@agh1`.
+These release notes are edited by Alice Frumin and Andrew Hunt.  If you'd like
+to provide feedback on them, please login to https://chat.civicrm.org/civicrm
+and contact `@agh1`.
