--- a/release-notes/4.7.25.md
+++ b/release-notes/4.7.25.md
@@ -1,11 +1,25 @@
 # CiviCRM 4.7.25
 
-Released October 4, 2017;
+Released October 4, 2017
 
+- **[Synopsis](#synopsis)**
 - **[Features](#features)**
 - **[Bugs resolved](#bugs)**
 - **[Miscellany](#misc)**
 - **[Credits](#credits)**
+- **[Feedback](#feedback)**
+
+## <a name="synopsis"></a>Synopsis
+
+| *Does this version...?*                                     |         |
+|:----------------------------------------------------------- |:-------:|
+| Fix security vulnerabilities?                               |         |
+| Change the database schema?                                 |         |
+| Alter the API?                                              |         |
+| Require attention to configuration options?                 |         |
+| Fix problems installing or upgrading to a previous version? |         |
+| Introduce features?                                         |         |
+| Fix bugs?                                                   |         |
 
 ## <a name="features"></a>Features
 
@@ -325,3 +339,9 @@ Most authors also reviewed code for this release; in addition, the following
 reviewers contributed their comments:
 
 AGH Strategies - Alice Frumin, Andrew Hunt; Agileware - Agileware Team; andrew; andyw; artfulrobot.com; Australian Greens - Seamus Lee; autarch; Barbara Miller; Black Brick Software - David Hayes; Blackfly Solutions - Alan Dixon; brian; British Humanist Association - Andrew West, William Gordon; CEDC - Laryn Kragt Bakker; charlie; cherylchase; Christian Wach; Circle Interactive - Dave Jenkins, Martin Castle; CiviCoop - Jaap Jansma; CiviCooP - Klaas Eikelboom; civicrm-builder; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Nicolas Ganivet, Yashodha Chaku; CiviFirst - John Kirk; CompuCorp - Guanhuan Chen, Omar Abu Hussein; Coop SymbioTIC - Mathieu Lutfy; darrick; Dave Greenberg; David Hepper; deepak; demeritcowboy; Donald Hirst; Donald Lobo; dsnopek; eaiman; Effy Elden; Electronic Frontier Foundation - Mark Burdett; ericg; esummers; Forest CRM Consulting - Tamar Meir; Freeform Solutions - Herb van den Dool; freephile; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit, Peter Davis; Greenleaf Advancement - Guy Iaccarino; inteja; JMA Consulting - Edsel Lopez, Joe Murray, Monish Deb, Pradeep Nayak; joels341; Johan Vervloet; John Kingsnorth; Joinery - Allen Shaw; jonesinator; jusfreeman; ken; Ken West; Klangsoft - David Reedy Jr; Korlon - Stuart Gaston; Left Join Labs - Sean Madsen; Lemniscus - Noah Miller; Lighthouse Design and Consulting - Brian Shaughnessy; Lullabot - Nate Lampton; manish; Marc Brazeau; Megaphone Technology Consulting - Jon Goldberg; Michal Mach; MJW Consulting - Matthew Wire; myDropWizard - David Snopek; Nubay Services - David Tarrant; Oxfam Germany - Thomas Schüttler; Palante Technology Cooperative - Joseph Lacey; Phil McKerracher; Progressive Technology Project - Jamie McClelland; Rareș Pamfil; Responsive Development Technologies - Thomas Nilefalk; RexAK; RexAK-SOF; Richard van Oosterhout; rtobias; rtobias81; s.bink; Saurabh Batra; Semper IT - Karin Gerritsen; SEN Magazine - Jeremy Nicholls; shailesh; Skvare - Mark Hanna; Squiffle Consulting - Aidan Saunders; Tadpole Collective - Kevin Cristiano; Team Expansion - Greg Harris; tobiaslounsbury; Wikimedia Foundation - Elliott Eggleston
+
+## <a name="feedback"></a>Feedback
+
+These release notes are edited by Alice Frumin and Andrew Hunt.  If you'd like
+to provide feedback on them, please login to https://chat.civicrm.org/civicrm
+and contact `@agh1`.
