first attempt at formatting and adding notes to release notes

--- a/release-notes/4.7.25.md
+++ b/release-notes/4.7.25.md
@@ -25,37 +25,63 @@ Released October 4, 2017
 
 ### CiviCase, Core CiviCRM
 
-- **[CRM-20958](https://issues.civicrm.org/jira/browse/CRM-20958) Data model: Track creation+modification times for activities+cases ([10754](https://github.com/civicrm/civicrm-core/pull/10754))**
+- **[CRM-20958](https://issues.civicrm.org/jira/browse/CRM-20958) Data model:
+  Track creation+modification times for activities+cases
+  ([10754](https://github.com/civicrm/civicrm-core/pull/10754))**
+
+  Adds timestamp columns created_date and modified_date to the tables
+  `civicrm_activity` and `civicrm_case`
 
 ### CiviCRM API
 
-- **[CRM-21152](https://issues.civicrm.org/jira/browse/CRM-21152) Add spec for MembershipStatus.calc API function ([10944](https://github.com/civicrm/civicrm-core/pull/10944))**
+- **[CRM-21152](https://issues.civicrm.org/jira/browse/CRM-21152) Add spec for
+  MembershipStatus.calc API function
+  ([10944](https://github.com/civicrm/civicrm-core/pull/10944))**
 
-### Core CiviCRM, Internationalisation
-
-- **[CRM-19968](https://issues.civicrm.org/jira/browse/CRM-19968) Disable multiple languages fixes ([9783](https://github.com/civicrm/civicrm-core/pull/9783))**
+  Adds a function to adjust Metadata for Calc action. The metadata is used for
+  setting defaults, documentation & validation.
 
 ### Core CiviCRM
 
-- **[CRM-21153](https://issues.civicrm.org/jira/browse/CRM-21153) Fix mispelled variable ([10945](https://github.com/civicrm/civicrm-core/pull/10945))**
+- **[CRM-20769](https://issues.civicrm.org/jira/browse/CRM-20769) Allow for
+  Button Text on profiles to be overriden in settings
+  ([10940](https://github.com/civicrm/civicrm-core/pull/10940))**
 
-- **[CRM-20769](https://issues.civicrm.org/jira/browse/CRM-20769) Allow for Button Text on profiles to be overriden in settings ([10940](https://github.com/civicrm/civicrm-core/pull/10940))**
+  This adds columns to the civicrm_uf_group table to support customising profile
+  buttons
 
-- **[CRM-20964](https://issues.civicrm.org/jira/browse/CRM-20964) Include queue id while retrieving rows from Event Queue. ([10757](https://github.com/civicrm/civicrm-core/pull/10757))**
+- **[CRM-20964](https://issues.civicrm.org/jira/browse/CRM-20964) Include queue
+  id while retrieving rows from Event Queue.
+  ([10757](https://github.com/civicrm/civicrm-core/pull/10757))**
 
-- **[CRM-21118](https://issues.civicrm.org/jira/browse/CRM-21118) Add action links for message templates overview at top of page ([10917](https://github.com/civicrm/civicrm-core/pull/10917))**
+  CRM_Mailing_Event_BAO_Queue::getRows(); returned rows for each intended
+  recipients, but didn't include any info which differentiates each row.
 
-- **[CRM-20979](https://issues.civicrm.org/jira/browse/CRM-20979) pre help for price fields not exposed to UI. ([10780](https://github.com/civicrm/civicrm-core/pull/10780))**
+  This adds a queue_id in the key column of the $result array which enables
+  hooks to know which row is getting displayed.
 
-- **[CRM-21065](https://issues.civicrm.org/jira/browse/CRM-21065) Replace some deprecated slow function calls: some CRM_Core_OptionGroup::values with CRM_Activity_BAO_ActivityContact::buildOptions ([10860](https://github.com/civicrm/civicrm-core/pull/10860))**
+- **[CRM-21118](https://issues.civicrm.org/jira/browse/CRM-21118) Add action
+  links for message templates overview at top of page
+  ([10917](https://github.com/civicrm/civicrm-core/pull/10917))**
 
-- **[CRM-21068](https://issues.civicrm.org/jira/browse/CRM-21068) &lastModified() fails more gracefully. ([10863](https://github.com/civicrm/civicrm-core/pull/10863))**
+  Previously action links (add message template) were only shown at the bottom of
+  the page.  If you have lot's of message templates it is not visible until
+  scrolling down.  This adds the links at the top of the page as well (like many
+  other pages in civicrm).
 
-- **[CRM-20680](https://issues.civicrm.org/jira/browse/CRM-20680) Make the CiviCRM logo spin while waiting for next page to load ([10903](https://github.com/civicrm/civicrm-core/pull/10903))**
+- **[CRM-20979](https://issues.civicrm.org/jira/browse/CRM-20979) pre help for
+  price fields not exposed to UI.
+  ([10780](https://github.com/civicrm/civicrm-core/pull/10780))**
 
-- **[CRM-21099](https://issues.civicrm.org/jira/browse/CRM-21099) Contribution search: "Total Cancelled Amount" surprisingly includes "refunded" status ([10893](https://github.com/civicrm/civicrm-core/pull/10893))**
+  Adds a field to the Add/Edit Price Field Form to enter pre help for price
+  fields.
 
-- **[CRM-21075](https://issues.civicrm.org/jira/browse/CRM-21075) Notice errors on contact edit ([10878](https://github.com/civicrm/civicrm-core/pull/10878))**
+- **[CRM-20680](https://issues.civicrm.org/jira/browse/CRM-20680) Make the
+  CiviCRM logo spin while waiting for next page to load
+  ([10903](https://github.com/civicrm/civicrm-core/pull/10903))**
+
+  This patch gives a visual indication that the next page is loading by
+  spinning the Civi logo when navigating to a new page.
 
 - **[CRM-21078](https://issues.civicrm.org/jira/browse/CRM-21078) Allow user to save and continue editing message template ([10871](https://github.com/civicrm/civicrm-core/pull/10871))**
 
@@ -124,6 +150,33 @@ Released October 4, 2017
 ## <a name="bugs"></a>Bugs resolved
 
 ### Core CiviCRM
+
+- **[CRM-21068](https://issues.civicrm.org/jira/browse/CRM-21068)
+  &lastModified() fails more gracefully.
+  ([10863](https://github.com/civicrm/civicrm-core/pull/10863))**
+
+  Without this change, there were cases were some contacts were throwing Not Of
+  Type Integer errors in the Contact Summary view (from getDisplayAndImage).
+
+  This change makes the getLastModified fail more gracefully, so it doesn't
+  display an error if something is missing for a contact when getDisplayAndImage
+  is called from the Summary View.
+
+- **[CRM-21099](https://issues.civicrm.org/jira/browse/CRM-21099) Contribution
+  search: "Total Cancelled Amount" surprisingly includes "refunded" status
+  ([10893](https://github.com/civicrm/civicrm-core/pull/10893))**
+
+  In the results of a Find Contributions search, summary numbers are displayed
+  at the top. One of these is "Total Cancelled Amount" this total included
+  contributions with a "Refunded" or "Cancelled" status. This total now only includes
+  contributions with a status of "Cancelled".
+
+- **[CRM-21075](https://issues.civicrm.org/jira/browse/CRM-21075) Notice errors
+  on contact edit
+  ([10878](https://github.com/civicrm/civicrm-core/pull/10878))**
+
+  When a user would edit their record, a series of notices would be generated
+  because of use of a deprecated function. This change removes those errors.
 
 - **[CRM-21230](https://issues.civicrm.org/jira/browse/CRM-21230) Multi-value custom field import fail with error message: Call to undefined method CRM_Custom_Import_Parser_Api::formatContactParameters ([11039](https://github.com/civicrm/civicrm-core/pull/11039))**
 
@@ -327,7 +380,38 @@ Released October 4, 2017
 
 - **[CRM-21166](https://issues.civicrm.org/jira/browse/CRM-21166) WP-CLI commands fail due to whitespace in regex ([115](https://github.com/civicrm/civicrm-wordpress/pull/115))**
 
+### Internationalisation
+
+- **[CRM-19968](https://issues.civicrm.org/jira/browse/CRM-19968) Disable
+  multiple languages fixes
+  ([9783](https://github.com/civicrm/civicrm-core/pull/9783))**
+
+  This patch makes the following tweaks to the SQL queries that run when
+  disabling multiple languages so that it is more likely to succeed.
+
+  1. Column is renamed instead of created and copied, as the copy often leads to
+  a row size constraint (eg. in civicrm_event when you have some text in
+  intro_text_lang).
+  2. Use DROP VIEW IF EXISTS instead of DROP VIEW (supported
+  in mysql 5.1+). There is more support for IF EXISTS on other SQL functions in
+  new versions of mysql but we can't use them if we're maintaining
+  compatibility.
+
 ## <a name="misc"></a>Miscellany
+
+- **[CRM-21153](https://issues.civicrm.org/jira/browse/CRM-21153) Fix mispelled
+  variable ([10945](https://github.com/civicrm/civicrm-core/pull/10945))**
+
+  Fixes a misspelled variable
+
+- **[CRM-21065](https://issues.civicrm.org/jira/browse/CRM-21065) Replace some
+  deprecated slow function calls: some CRM_Core_OptionGroup::values with
+  CRM_Activity_BAO_ActivityContact::buildOptions
+  ([10860](https://github.com/civicrm/civicrm-core/pull/10860))**
+
+  Replace (some not all) CRM_Core_OptionGroup::values with
+  CRM_Activity_BAO_ActivityContact::buildOptions where it is safe to do so (ie.
+  parameters map directly).  
 
 ## <a name="credits"></a>Credits
 
